[gd_scene load_steps=55 format=3 uid="uid://db78a6v3ow61v"]

[ext_resource type="Script" uid="uid://ck135jej2ki6r" path="res://scripts/hunter.gd" id="1_317ji"]
[ext_resource type="Texture2D" uid="uid://l27fpmyq68f3" path="res://art/Soldier.png" id="1_kprhw"]
[ext_resource type="Texture2D" uid="uid://ba6po724cg5l1" path="res://Tiny Swords/Tiny Swords/Resources/Sheep/HappySheep_Idle.png" id="3_ud0eg"]
[ext_resource type="Texture2D" uid="uid://dp0hda1e1021e" path="res://Tiny Swords/Tiny Swords/Resources/Sheep/HappySheep_Bouncing.png" id="4_r5utn"]
[ext_resource type="Texture2D" uid="uid://2g55ggajqods" path="res://Tiny Swords/Tiny Swords/Factions/Knights/Troops/Warrior/Blue/Warrior_Blue.png" id="5_r5utn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_317ji"]
atlas = ExtResource("1_kprhw")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qa2q0"]
atlas = ExtResource("1_kprhw")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ud0eg"]
atlas = ExtResource("1_kprhw")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5utn"]
atlas = ExtResource("1_kprhw")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_61tmg"]
atlas = ExtResource("1_kprhw")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwrp8"]
atlas = ExtResource("1_kprhw")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fd8u"]
atlas = ExtResource("3_ud0eg")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_odaex"]
atlas = ExtResource("3_ud0eg")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhqiw"]
atlas = ExtResource("3_ud0eg")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfv3o"]
atlas = ExtResource("3_ud0eg")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s66yg"]
atlas = ExtResource("3_ud0eg")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5lgx"]
atlas = ExtResource("3_ud0eg")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ge18y"]
atlas = ExtResource("3_ud0eg")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_auvuk"]
atlas = ExtResource("3_ud0eg")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rxo5"]
atlas = ExtResource("4_r5utn")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_stxvy"]
atlas = ExtResource("4_r5utn")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxef6"]
atlas = ExtResource("4_r5utn")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bufo"]
atlas = ExtResource("4_r5utn")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmscl"]
atlas = ExtResource("4_r5utn")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_da1dl"]
atlas = ExtResource("4_r5utn")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwehs"]
atlas = ExtResource("1_kprhw")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fee4n"]
atlas = ExtResource("1_kprhw")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8hr0"]
atlas = ExtResource("1_kprhw")
region = Rect2(200, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_thx0d"]
atlas = ExtResource("1_kprhw")
region = Rect2(300, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnooh"]
atlas = ExtResource("1_kprhw")
region = Rect2(400, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q61ou"]
atlas = ExtResource("1_kprhw")
region = Rect2(500, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvyfe"]
atlas = ExtResource("1_kprhw")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6ggo"]
atlas = ExtResource("1_kprhw")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f836u"]
atlas = ExtResource("1_kprhw")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3l5bi"]
atlas = ExtResource("1_kprhw")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_24mse"]
atlas = ExtResource("1_kprhw")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6odb"]
atlas = ExtResource("1_kprhw")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwp4l"]
atlas = ExtResource("1_kprhw")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp30m"]
atlas = ExtResource("1_kprhw")
region = Rect2(700, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei13h"]
atlas = ExtResource("5_r5utn")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4angv"]
atlas = ExtResource("5_r5utn")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjuac"]
atlas = ExtResource("5_r5utn")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5b7p"]
atlas = ExtResource("5_r5utn")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss1p0"]
atlas = ExtResource("5_r5utn")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_oehvp"]
atlas = ExtResource("5_r5utn")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyiud"]
atlas = ExtResource("5_r5utn")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctmbm"]
atlas = ExtResource("5_r5utn")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8484x"]
atlas = ExtResource("5_r5utn")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4dex"]
atlas = ExtResource("5_r5utn")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_auxdd"]
atlas = ExtResource("5_r5utn")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1lo2"]
atlas = ExtResource("5_r5utn")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_1fd8u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_317ji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qa2q0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ud0eg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5utn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61tmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwrp8")
}],
"loop": true,
"name": &"idle",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fd8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odaex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhqiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfv3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s66yg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5lgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge18y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auvuk")
}],
"loop": true,
"name": &"sheep_idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rxo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stxvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxef6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bufo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmscl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_da1dl")
}],
"loop": true,
"name": &"sheep_walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwehs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fee4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8hr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thx0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnooh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q61ou")
}],
"loop": false,
"name": &"swing",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvyfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6ggo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f836u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3l5bi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24mse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6odb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwp4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp30m")
}],
"loop": true,
"name": &"walk",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei13h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4angv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjuac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5b7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss1p0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oehvp")
}],
"loop": true,
"name": &"warrior_idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyiud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctmbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8484x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4dex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auxdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1lo2")
}],
"loop": true,
"name": &"warrior_walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_odaex"]
size = Vector2(8, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_317ji"]
size = Vector2(18.800003, 20.000004)

[node name="hunter" type="CharacterBody2D"]
y_sort_enabled = true
texture_filter = 1
scale = Vector2(4.5, 4.5)
script = ExtResource("1_317ji")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0.44444445, 6.888889)
sprite_frames = SubResource("SpriteFrames_1fd8u")
animation = &"warrior_idle"
offset = Vector2(-0.44444445, -6.888889)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.9999995)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("RectangleShape2D_odaex")

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(13.4, 2.9802322e-08)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("RectangleShape2D_317ji")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
